# youtube_analytics

./: README.md  main.py  pyproject.toml  requirements.txt
tests/: test_cli.py  test_loader.py  test_reports.py
youtube_analytics/: __init__.py  cli.py  loader.py  models.py
youtube_analytics/reports/: __init__.py  base.py  clickbait.py  registry.py
