[project]
name = "youtube-analytics"
version = "0.1.0"
description = "CLI application for building YouTube analytics reports from CSV files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.11,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
